# Twitch-AI-Chatbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.template.yml  docker-compose.template.yml
instructions/: README.md  template.json
src/: lib.rs  main.rs
src/chat_model/: mod.rs
src/chat_model/core/: mod.rs
src/chat_model/providers/: openai.rs
src/chat_model/service/: completion.rs  mod.rs  types.rs
src/config/: channel.rs  mod.rs  utils.rs
src/logger/: mod.rs
src/twitch/: mod.rs  utils.rs
src/workflows/: mod.rs  payload.rs  recv_and_send_msg.rs  send_msg.rs  types.rs
