[package]
name = "Twitch-AI-Chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
url = "2.5.7"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = "0.3.31"
thiserror = "2.0.16"
async-trait = "0.1.89"
regex = "1.11.2"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.132"
